--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue">#00FFFF</color>
+    <color name="yellow">#FFFF80</color>
+    <color name="red">#FF6666</color>
+    <color name="green">#AFE1AF</color>
+    <color name="orange">#E97451</color>
 </resources>
