--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="red">#FF6666</color>
     <color name="green">#AFE1AF</color>
     <color name="orange">#E97451</color>
+    <color name="howSweet">#32a852</color>
 </resources>
