--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,14 +55,13 @@
                             android:textSize="14sp" />
 
                         <TextView
-                            android:id="@+id/textView12"
-                            android:layout_width="match_parent"
-                            android:layout_height="100dp"
-                            android:gravity="center"
-                            android:text="5"
-                            android:textAlignment="center"
-                            android:textColor="#000000"
-                            android:textSize="34sp" />
+                                android:id="@+id/txtDrankWaterCount"
+                                android:layout_width="match_parent"
+                                android:layout_height="100dp"
+                                android:gravity="center"
+                                android:textAlignment="center"
+                                android:textColor="#000000"
+                                android:textSize="34sp" />
 
                         <TextView
                             android:id="@+id/textView13"
